# PicoWatercoolingTempGauge

./: .gitignore  .gitmodules  README.md
.github/workflows/: firmware_build.yml
src/: CMakeLists.txt  display.c  display.h  main.c  settings.c  settings.h  status_led.c  status_led.h
src/custom_font/: Font.psd  Pix32_Font.psd  font_to_header.py  fonts.cmake
